[tool.poetry]
name = "iss-pos"
version = "0.1.0"
description = ""
authors = ["JO <olesjakubb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.0"
numpy = "^1.15"
pyproj = "^1.9"
pyshp = "^2.0"
pyephem = "^3.7"
requests = "^2.21"


# basemap = { path = "iss_pos/dep/basemap-1.2.0rel.tar.gz" }
# geos = { git = "https://github.com/matplotlib/basemap/tree/master/geos-3.3.3"}
# basemap = { git = "https://github.com/matplotlib/basemap.git"}

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.6"

[tool.poetry.scripts]
# iss = 'python -m iss_pos'
iss = 'iss_pos.__main__.py'
hello = 'iss_pos.__main__:hello'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
